style.css
header {
    display: flex;
    align-items: center;
    flex-direction: column;
    width:100%;
    text-align: center;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-right: 0px;
    background-color: #3C4558;
    margin-bottom: 15px;
    color: #F4F8FF;
    font-family: 'Cascadia Mono', monospace;
    font-size: large;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Cascadia Mono', monospace;
}

header h2 {
    margin-top: 0;
}

body {
    display: flex;
    align-items: center;
    flex-direction: column;
    background-color: #2E343F;
    color: #F4F8FF;
    margin: 0;
    padding: 0;
    text-align: center;
    font-family: 'Cascadia Mono', monospace;
    font-size: medium;
}

a {
    color: #71C4E8;
    text-decoration: none;
}

a:visited {
    color: #D693ED;
}

.icon-box,
.light-icon-box {
    display: flex;
    flex-direction: row;
    background-color: #3C4558;
    color: #F4F8FF;
    margin: 10px;
    border-radius: 0px;
    display: inline-block;
    border-radius: 15px;
}

.light-icon-box{
    background-color: #46526B;
    color: #F4F8FF;
}

.icon{
    display: inline-flex
}

.social-icon{
    display: none
}

.icon img,
.social-icon img {
    border-radius: 0px;
    height: 50px;
    margin: 10px;
    transition: transform 0.3s ease;
}

.icon img:hover,
.social-icon img:hover {
    transform: scale(1.1);
}

.text-box,
.left-text-box,
.big-text-box {
    display:block;
    box-sizing: border-box;
    width: 60%;
    margin: 20px;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-inline: 30px;
    background-color: #46526B;
    color: #F4F8FF;
    border-radius: 10px;
}

.left-text-box {
    text-align: left;
}

.big-text-box{
    width: 80%;
}

.image {
    margin: 6px auto;
    max-width: 60%;
    width: auto;
}

#gallery {
    width: 80%;
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    margin: 20px auto;
}

#gallery .column {
    flex-grow: 1;
    flex-basis: calc(100% / 2 - 10px);
}

#gallery .blog-column {
    margin: 20px auto;
    flex-grow: 1;
    flex-basis: calc(100% / 2 - 10px);
}

.image-container{
    width: 100%;
}

#gallery img {
    min-width:inherit;
    width: 100%;
    object-fit: cover;
    border-radius: 5px;
    transition: transform 0.3s ease, border-color 0.3s ease;
}

#gallery img:hover {
    transform: scale(1.1);
    cursor: pointer;
}

#overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    display: flex;
    justify-content: center;
    align-items: flex-start;
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.3s, visibility 0.3s;
}

.overlay-content {
    position: relative;
    padding: 20px;
    max-width: 800px;
    width: 100%;
    height: calc(100% - 40px);
}

.overlay-content iframe {
    width: 100%;
    border-radius: 10px;
    height: 100%;
}

.close-btn {
    position: absolute;
    top: 10px;
    right: 20px;
    width: 40px;
    height: 40px;
    background-color: #46526B;
    color: #F4F8FF;
    border: none;
    font-size: 30px;
    cursor: pointer;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: background-color 0.3s, transform 0.3s;
}


.close-btn:hover, .close-btn:focus {
    background-color: #E13939;
    transform: scale(1.1);
    outline: none;
}

.close-btn:before {
    content: '×';
    font-weight: bold;
}

.message {
    position: fixed;
    bottom: 40px;
    left: 50%;
    transform: translateX(-50%);
    background-color: #F4F8FF;
    color: #3C4558;
    padding: 10px;
    border-radius: 5px;
    visibility: hidden;
    opacity: 0;
    transition: opacity 0.3s ease;
    z-index: 1000;
    min-width: 100px;
    text-align: center;
    box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.15);
}

.button {
    text-decoration-line: none;
    background-color: #F4F8FF;
    color: #3C4558;
    padding: 10px;
    border-radius: 5px;
    text-align: center;
    box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.15);
    transition-duration: 0.3s;
}

.button:hover{
    transition-duration: 0.3s;
    background-color: #71C4E8;
}

.post-container {
    width: 80%;
    margin: auto;
    text-align: center;
    background-color: #46526B;
    padding: 20px;
    border-radius: 10px;
    cursor: pointer;
}

.post-container img {
    width: 60%;
    height: auto;
    border-radius: 5px;
}

.post-container h2 {
    margin: 15px 0;
    color: #F4F8FF;
}

.post-container p {
    color: #D1D5DB;
}

@media (max-width: 800px) or (max-aspect-ratio: 1) {
    #gallery .column {
        flex-basis: calc(100% / 1 - 10px);
    }
    .text-box,
    .left-text-box,
    .image,
    .gallery-small,
    .post-container,
    .post-container img {
        width: 90%;
    }
}

@media (min-width: 1200px) and (min-aspect-ratio: 1) {
    #gallery .column {
        flex-basis: calc(100% / 3 - 10px);
    }
    .text-box,
    .left-text-box,
    .image,
    .gallery-small,
    .post-container {
        width: 40%;
    }
    .post-container img{
        width: 60%;
    }
}

